tests/samples/negative/traits/trait_associated_type_duplicate_equality.ax
module trait_associated_type_duplicate_equality;

trait Source {
    type Item;
}

fn use_source[T](value: T) -> i32 where T: Source[Item = i32, Item = i32] {
    return 0;
}

fn main() -> i32 {
    return 0;
}
